[gd_scene load_steps=2 format=3 uid="uid://c8yhh7y4x3ra7"]

[ext_resource type="Script" path="res://scenes/dialogs/update_dialog/update_dialog.gd" id="1"]

[node name="UpdateDialog" type="PanelContainer" node_paths=PackedStringArray("_ok_button", "_cancel_button")]
offset_right = 363.0
offset_bottom = 183.0
script = ExtResource("1")
_ok_button = NodePath("VBoxContainer/HBoxContainer/OkButton")
_cancel_button = NodePath("VBoxContainer/HBoxContainer/CloseButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelTitle"
text = "DIALOG_UPDATE_TITLE"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Body" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"Text"
bbcode_enabled = true
fit_content = true

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="OkButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "DIALOG_UPDATE_BTN_OK"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
text = "BTN_CLOSE"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true
body_size_limit = 20000
timeout = 10.0

[connection signal="meta_clicked" from="VBoxContainer/Body" to="." method="_on_body_meta_clicked"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTP_request_request_completed"]
